<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top" />

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/question_one_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <RadioButton
        android:id="@+id/radio_btn_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onQuestionOneClicked"
        android:text="@string/question_one_a"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_num_one" />

    <RadioButton
        android:id="@+id/radio_btn_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:onClick="onQuestionOneClicked"
        android:text="@string/question_one_b"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/radio_btn_a"
        app:layout_constraintTop_toBottomOf="@+id/radio_btn_a" />

    <RadioButton
        android:id="@+id/radio_btn_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onQuestionOneClicked"
        android:text="@string/question_one_c"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_btn_b" />

    <TextView
        android:id="@+id/question_num_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/question_one"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="102dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="420dp"
        android:layout_weight="1"
        android:onClick="submitBtnHandler"
        android:text="@string/submit_btn"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="44dp"
        android:layout_weight="1"
        android:onClick="resetBtnHandler"
        android:text="@string/reset_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>